# meow-vm-v2

./: .clang-format  .clang-format.bak  .gitignore  CMakeLists.txt  CMakePresets.json  log.out
.meowconfig/: cache
docs/: op_codes.md  stdlib.md  todo.md
include/bytecode/: binary_loader.h  chunk.h  op_codes.h
include/common/: cast.h  definitions.h  pch.h
include/core/: definitions.h  meow_object.h  object_traits.h  objects.h  op_codes.h  type.h  value.h
include/core/objects/: array.h  function.h  hash_table.h  module.h  native.h  oop.h  string.h
include/debug/: disassemble.h  print.h
include/diagnostics/: diagnostic.h  locale.h
include/memory/: garbage_collector.h  gc_disable_guard.h  gc_visitor.h  mark_sweep_gc.h  memory_manager.h
include/module/: module_manager.h  module_utils.h
include/module/loader/: binary_loader.h  lexer.h  parser.h  tokens.h
include/runtime/: builtin_registry.h  call_frame.h  chunk.h  error_recovery.h  exception_handler.h  execution_context.h  operator_dispatcher.h  upvalue.h
include/utils/: NOTE.md
include/utils/container/: hash_table.h  list.h  node.h  pair.h  vector.h
include/utils/misc/: hash.h
include/utils/string/: string_hash.h  unicode.h
include/utils/types/: expected.h  optional.h  variant.h
include/utils/types/variant/: variant_fallback.h  variant_nanbox.h  variant_nanbox_old.h  variant_utils.h
include/vm/: interpreter.h  machine.h  macros.h  meow_engine.h  meow_vm.h  vm_error.h
langs/: vi.lang
libs/meow_variant/: CMakeLists.txt
libs/meow_variant/include/: meow_variant.h
libs/meow_variant/internal/: fallback.h  nanbox.h  utils.h
libs/variant/: variant_nanbox.h  variant_utils.h
scripts/: build_fast.sh  format.sh  run.sh
src/: main.cpp
src/bytecode/: binary_loader.cpp  disassemble.cpp
src/core/: objects.cpp
src/debug/: disassemble.cpp
src/diagnostics/: diagnostic.cpp
src/memory/: mark_sweep_gc.cpp  memory_manager.cpp
src/module/: module_manager.cpp  module_utils.cpp
src/module/loader/: binary_loader.cpp  lexer.cpp  parser.cpp
src/runtime/: operator_dispatcher.cpp
src/vm/: lifecycle.cpp  machine.cpp  meow_vm.cpp
src/vm/handlers/: data.inl  exception.inl  load.inl  memory.inl  module.inl  oop.inl
tests/: gen_bytecode.cpp  gentool  masm  masm.cpp  test.meow  test.meowb
tools/: gen_bytecode.cpp  masm.cpp
tools/masm/: CMakeLists.txt
tools/masm/include/: assembler.h  common.h  lexer.h
tools/masm/src/: assembler.cpp  lexer.cpp  main.cpp
